hphp/hack/test/typecheck/higher_kinded_types/generics_arguments_compared.php
<?hh // strict

// T<int> and T<string> are indeed different types :)
function test<T<TX>>(T<int> $x) : T<string> {
  return $x;
}
